--- a/package.json
+++ b/package.json
@@ -1,24 +1,36 @@
 {
-  "name": "vtjump",
-  "private": true,
-  "version": "0.0.0",
+  "name": "vite-plugin-vtjump",
+  "private": false,
+  "version": "1.0.0",
+  "description": "A vite plugin for vtjump",
   "type": "module",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:plugin": "vite build --config vite.plugin.config.ts",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json && tsc -p tsconfig.node.json",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
     "format": "prettier --write ."
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "@tsconfig/svelte": "^5.0.4",
+    "@types/node": "^20.17.8",
     "prettier": "^3.4.1",
     "prettier-plugin-svelte": "^3.3.2",
     "svelte": "^5.2.7",
     "svelte-check": "^4.1.0",
-    "tslib": "^2.8.1",
-    "typescript": "~5.6.2",
-    "vite": "^6.0.1"
+    "typescript": "^5.3.3",
+    "vite": "^6.0.1",
+    "vite-plugin-dts": "^3.7.3"
+  },
+  "peerDependencies": {
+    "vite": "^6.0.0"
   }
 }
