--- a/examples/vue-example/package.json
+++ b/examples/vue-example/package.json
@@ -10,6 +10,8 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@vue/compiler-sfc": "^3.5.13",
+    "magic-string": "^0.30.14",
     "vue": "^3.3.4"
   },
   "devDependencies": {
@@ -17,7 +19,7 @@
     "@vue/test-utils": "^2.4.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.0",
-    "vue-tsc": "^1.8.3",
-    "vitest": "^0.32.2"
+    "vitest": "^0.32.2",
+    "vue-tsc": "^1.8.3"
   }
 }
