--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vite-plugin-vtjump",
+  "name": "vtjump",
   "private": false,
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "A vite plugin for vtjump",
   "type": "module",
   "main": "dist/index.js",
@@ -16,21 +16,53 @@
     "build:plugin": "vite build --config vite.plugin.config.ts",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run build",
+    "preversion": "npm run check",
+    "version": "npm run build && git add -A dist",
+    "postversion": "git push && git push --tags",
+    "publish:patch": "npm version patch && npm publish",
+    "publish:minor": "npm version minor && npm publish",
+    "publish:major": "npm version major && npm publish"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tsconfig/svelte": "^5.0.4",
     "@types/node": "^20.17.8",
+    "@vue/compiler-sfc": "^3.5.13",
+    "magic-string": "^0.30.14",
     "prettier": "^3.4.1",
     "prettier-plugin-svelte": "^3.3.2",
-    "svelte": "^5.2.7",
-    "svelte-check": "^4.1.0",
+    "rimraf": "^5.0.5",
+    "svelte": "^4.2.12",
+    "svelte-check": "^3.6.4",
     "typescript": "^5.3.3",
-    "vite": "^6.0.1",
+    "vite": "^5.0.12",
     "vite-plugin-dts": "^3.7.3"
   },
   "peerDependencies": {
-    "vite": "^6.0.0"
+    "vite": "^5.0.0"
+  },
+  "keywords": [
+    "vite",
+    "vite-plugin",
+    "jump",
+    "code-navigation"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yourusername/vtjump.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yourusername/vtjump/issues"
+  },
+  "homepage": "https://github.com/yourusername/vtjump#readme",
+  "publishConfig": {
+    "access": "public"
   }
 }
