--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "vite build --config vite.plugin.config.ts",
+    "build": "npm run build:plugin && npm run build:inject",
+    "build:plugin": "vite build --config vite.plugin.config.ts",
+    "build:inject": "vite build --config vite.inject.config.ts",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "format": "prettier --write .",
