--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "vite build --config vite.plugin.config.ts",
+    "build:client": "vite build",
+    "build:plugin": "vite build --config vite.plugin.config.ts",
+    "build": "npm run build:client && npm run build:plugin",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "format": "prettier --write .",
@@ -38,6 +40,7 @@
     "rimraf": "^5.0.5",
     "svelte": "^4.2.12",
     "svelte-check": "^3.6.4",
+    "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.12",
     "vite-plugin-dts": "^3.7.3"
