--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tsconfig/svelte": "^5.0.4",
     "@types/node": "^20.17.8",
+    "@vue/compiler-core": "^3.5.13",
     "@vue/compiler-sfc": "^3.5.13",
     "magic-string": "^0.30.14",
     "prettier": "^3.4.1",
